--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,5 @@
-project(std_modules)
+cmake_minimum_required(VERSION 3.22)
 
-set(CMAKE_CXX_STANDARD 23)
+project(c++20_modules)
 
-# Add target to build iostream module
-add_custom_target(std_modules ALL
-        COMMAND ${CMAKE_COMMAND} -E echo "Building standard library modules"
-        COMMAND g++ -fmodules-ts -std=c++${CMAKE_CXX_STANDARD} -c -x c++-system-header iostream vector
-        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
-        )
-
-# Function to set up modules in GCC
-function(prepare_for_module TGT)
-    target_compile_options(${TGT} PUBLIC -fmodules-ts)
-    set_property(TARGET ${TGT} PROPERTY CXX_EXTENSIONS OFF)
-    add_dependencies(${TGT} std_modules)
-endfunction()
-
-add_executable(std_modules_example main.cpp)
-prepare_for_module(std_modules_example)
+add_subdirectory(std_modules)
